--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3 
  	- Fixed Flash Player now playing issue
  	- Fixed a img resize logic error that could cause no art to
		display if resize was on and resize failed
  	- Added Albums of the Moment to the Front page and removed the
		stats information
  	- Moved Popular/Recent to /stats.php and made Browse by Song the
		default browse action
  	- Fixed missing clean of Genre stats information and a logic
		flaw with order of clean functions in the catalog clean 
  	- Fixed Localplay page appearing even if disabled by Admin Config
		if user still had distinct permissions
  	- Added Menu to TV page per request
  	- Fixed Album Art Upload and Cover URL methods
  	- Fixed play lock with Democratic Play if song no longer exists
  	- Fixed a display issue of the Now Playing on the Democratic
		play page
  	- Fixed display of Last IP if track_user_ip was disabled
  	- Fixed Update to redirect to test.php if no db connection found
		(Thx SpComb)
	- Fixed an issue that caused AJAX not to work if you were working
		in a sub-directory. 

--------------------------------------------------------------------------
  v.3.3.3-Beta3 01/04/2007 
	- Fixed a few more unhandled mis-configurations of Localplay which
		could cause PHP errors
	- Fixed an issue with the Quick Jump box on Browse by Songs
		(Thx Jru)
	- Tweaked Headers passed for AJAX in an attempt to 'help' IE. 
  	- Last Database update before Stable
  	- Fixed a view issue introduced when sorting of the albums under
		single artist view was added 
  	- Removed unused options from config file
  	- Fixed some remaining album art issues and a undefined array()
		issue if you only have one user and try to view 
		recommendations