@@ -553,7 +553,6 @@ margin-right:5em;
 .np_row {
 	padding-top: 3px;
 	padding-bottom: 3px;
-	display: block;
 }
 .np_cell {
 	margin: 10px;
